# sphere

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
build_files/platform/: platform_macos.cmake
data/: Info.plist
data/icons/: temp.icns
data/shaders/: shader.frag  shader.vert  shader_test.frag  shader_test.vert  test.txt
docs/: docs.md
libs/editor/: CMakeLists.txt  editor.cpp  editor.h
libs/editor/panels/: project_browser.cpp
libs/engine/: CMakeLists.txt  buffer.cpp  buffer.h  camera.cpp  camera.h  descriptor_set_builder.cpp  descriptor_set_builder.h  descriptor_set_manager.h  engine.cpp  engine.h  graphics_pipeline.cpp  graphics_pipeline.h  includes.h  memory.cpp  memory.h  memory_allocator.cpp  memory_allocator.h  pipeline_builder.cpp  pipeline_builder.h  render_pass.cpp  render_pass.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  types.h  utils.cpp  utils.h  vulkan_context_debug.cpp  vulkan_context_surface.cpp  vulkan_create.cpp  vulkan_create.h  vulkan_setup.cpp  window.cpp  window.h
libs/engine/core/: utils.cpp  vulkan_context.cpp  vulkan_context.h  vulkan_context_device.cpp  vulkan_context_instance.cpp
libs/engine/os/: filesystem.h
libs/engine/renderer/: buffer.cpp  buffer.h  camera.cpp  camera.h  descriptor_set_builder.cpp  imgui_context.cpp  imgui_context.h  pipeline_builder.cpp  pipeline_builder.h  render_pass.cpp  render_pass.h  swapchain.cpp  texture.cpp  texture.h  vulkan_context.cpp  vulkan_context.h  vulkan_create.h  vulkan_setup.cpp
libs/engine/scene/: material.cpp  material.h  material_system.h  mesh.cpp  mesh.h  object.cpp  object.h  scene.cpp  scene.h  shader.cpp  shader.h  text_rendering.h
libs/engine/text/: text_rendering.cpp  text_rendering.h
libs/engine/ui/: text_rendering.cpp
libs/engine/vulkan/: imgui_context.cpp  imgui_context.h  vulkan_context.cpp  vulkan_context.h
libs/renderer/: CMakeLists.txt  HelloWorld.h  camera.cpp  camera.h  camera.hpp  context.cpp  context.hpp  device.hpp  engine.cpp  engine.h  engine.hpp  engine_debug.cpp  engine_device.cpp  engine_instance.cpp  engine_surface.cpp  graphics_pipeline.cpp  graphics_pipeline.h  graphics_pipeline.hpp  memory_allocator.cpp  memory_allocator.h  memory_allocator.hpp  reference.hpp  render_pass.cpp  render_pass.h  render_pass.hpp  renderer.cpp  renderer.h  renderer.hpp  swapchain.cpp  swapchain.h  swapchain.hpp  texture.hpp  types.h  types.hpp  utils.cpp  utils.h  utils.hpp  vertex_data.hpp  window.cpp  window.h  (+1 more)
libs/renderer/old/: graphics_pipeline.hpp  memory_allocator.hpp  renderer_old.hpp  texture.hpp  vertex_data.hpp
scripts/: compile-shaders.sh  generate-icons.sh
src/: CMakeLists.txt  HelloWorld.h  app.cpp  app.hpp  application.h  application.hpp  camera.hpp  main.cpp  material.hpp  mesh.hpp  mesh_renderer_node.hpp  node.h  node.hpp  scene.h  scene.hpp  selection.h  selection.hpp  shader.hpp  sphere.cpp  sphere.hpp  texture.hpp
src/commands/: add_node.hpp  add_node_command.hpp  add_nodes_command.h  add_nodes_command.hpp  command.cpp  command.h  command.hpp  remove_nodes_command.h  remove_nodes_command.hpp  select_node.hpp  select_node_command.hpp  select_nodes_command.h  select_nodes_command.hpp  transform_command.hpp  transform_nodes_command.h  transform_nodes_command.hpp  undo_stack.cpp  undo_stack.h  undo_stack.hpp
src/editor/: CMakeLists.txt  editor.cpp
src/editor/panels/: project_browser.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h
src/engine/core/: CMakeLists.txt  glfw.h  glm.h  includes.h  vma.h  vulkan.h  window.cpp  window.h
src/engine/renderer/: CMakeLists.txt  buffer.cpp  buffer.h  camera.cpp  camera.h  descriptor_set_builder.cpp  descriptor_set_builder.h  descriptor_sets.cpp  descriptor_sets.h  imgui_context.cpp  imgui_context.h  material.cpp  material.h  material_system.cpp  material_system.h  mesh.cpp  mesh.h  object.cpp  object.h  pipeline_builder.cpp  pipeline_builder.h  render_pass.cpp  render_pass.h  scene.cpp  scene.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  types.h  utils.cpp  utils.h  vulkan_context.cpp  vulkan_context.h  vulkan_create.cpp  vulkan_setup.cpp
src/engine/ui/: text_rendering.h
